# rag-core

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  README.md  compose.yaml  llms.txt  pyproject.toml  roadmap.md
.github/workflows/: ci.yml  docs.yml  eval.yml  release-artifacts.yml
dev/: DESIGN.md  PUBLIC_DOCS_PLAN.md  REBRAND.md  project_identity.local.toml.example  project_identity.toml
docs/: AGENTS.md  CONTEXT.md  README.md  embed.md  expectations.md  naming.md  providers.md  quickstart.md  release.md  self-host.md  stability.md
docs-site/: README.md  next.config.mjs  package.json  pnpm-lock.yaml
docs-site/content/docs/: agent-integration.mdx  api-python.mdx  cli.mdx  concepts.mdx  config.mdx  context.mdx  embed.mdx  eval-quality.mdx  expectations.mdx  formats.mdx  how-retrieval-works.mdx  http.mdx  index.mdx  ingest.mdx  install.mdx  meta.json  multi-tenancy.mdx  providers.mdx  quickstart.mdx  rag-modes.mdx  search.mdx  self-host.mdx  stability.mdx  sync.mdx  traces.mdx  tutorial.mdx
docs-site/src/app/: global.css  layout.tsx
docs-site/src/lib/: shared.ts  source.ts
docs/adr/: 0001-vendor-neutral-vector-store.md  0002-linear-pipeline-no-dsl.md  0003-no-platform-provider-model-lock-in.md  0004-library-core-with-optional-self-hostable-runtime.md
docs/embedding/: connector-pattern.md  production-guide.md
docs/evals/: retrieval-quality.md
docs/integrations/: vercel-ai-sdk-tools.md
docs/parsing/: formats.md
docs/plans/: 2026-05-17-retrieval-core-hardening.md  ROUTING.md  cursor-agent-review-strategy.md  dx-self-host-subagent-program.md  one-repo-retrieval-engine-strategy.md  retrieval-core-hardening-risk-register.md
docs/plans/archive/: 2026-05-17-retrieval-core-hardening.md  README.md  cursor-agent-review-strategy.md  dx-self-host-subagent-program.md  retrieval-core-hardening-risk-register.md
docs/providers/: custom-providers.md  provider-output-shapes.md  vector-stores.md
docs/research/: README.md  convex-landscape.md  managed-rag-landscape.md  oss-rag-landscape.md  retrieval-benchmark-corpus.md  turbopuffer-landscape.md
docs/self-host/: auth.md  config.md  openapi.yaml  quickstart.md
docs/templates/: AGENTS.md  CONTEXT.md  MISSION.md  README.md  ROUTING.md
examples/: ask_folder.py  chatbot_context.py  configured_eval.py  configured_retrieval.py  corpus_lifecycle.py  embedded_service.py  eval_cases.jsonl  minimal_app.py  pdf_ocr_path.py  retrieval_eval.py  search_endpoint.py  source_ingest.py  vercel_ai_sdk_search_tool.ts
examples/demo_corpus/: billing.md  corpus_lifecycle.md  security.md
scripts/: README.md  __init__.py  architecture_pressure.py  brand_check.sh  check_dist_artifacts.py  ci_self_host_smoke.sh  dx_smoke.sh  github_install_smoke.sh  landing_check.sh  local_rebrand.sh  public_checkout_smoke.sh  self_host_smoke.sh  setup_agent_docs.sh  validate_provider_fixtures.sh  verify_optional_integrations.sh  verify_vercel_ai_sdk_example.sh  wheel_extra_smoke.py  wheel_smoke.py  worktree_slices.py
src/rag_core/: __init__.py  __init__.pyi  _sync.py  archive_member_policy.py  archive_sources.py  cli.py  cli_archive.py  cli_archive_parser.py  cli_config_parser.py  cli_core_runtime.py  cli_demo.py  cli_demo_parser.py  cli_doctor.py  cli_doctor_output.py  cli_doctor_parser.py  cli_doctor_providers.py  cli_doctor_store.py  cli_eval.py  cli_eval_options.py  cli_eval_parser.py  cli_events_parser.py  cli_fetch_options.py  cli_help_examples.py  cli_ingest.py  cli_ingest_output.py  cli_ingest_parser.py  cli_inputs.py  cli_local_eval.py  cli_local_eval_parser.py  cli_local_search.py  cli_local_search_parser.py  cli_manifest.py  cli_manifest_parser.py  cli_mcp.py  cli_mcp_parser.py  cli_output.py  cli_parser.py  cli_provider_errors.py  cli_query.py  cli_query_parser.py  (+105 more)
src/rag_core/_engine/: core_archive_ingest.py  core_archive_runner.py  core_assembly.py  core_batch_ingest.py  core_builders.py  core_config_cli.py  core_file_io.py  core_ingest.py  core_ingest_decision.py  core_ingest_delete.py  core_ingest_delete_journal.py  core_ingest_events.py  core_ingest_fence.py  core_ingest_identity.py  core_ingest_recovery.py  core_ingest_results.py  core_ingest_write_ahead.py  core_jsonl_journal.py  core_lifecycle.py  core_manifest.py  core_manifest_builders.py  core_ocr_metadata.py  core_prepare.py  core_prepare_chunks.py  core_prepare_contextualizer.py  core_prepare_events.py  core_prepare_figure_locators.py  core_prepare_metadata.py  core_remote.py  core_retrieval.py  core_runtime.py  core_sidecar_sync.py  core_vector_store_factory.py
src/rag_core/cli/: __init__.py  _main.py  core_runtime.py  deprecations.py  doctor_output.py  (+8 more)
tests/: README.md  conftest.py  support.py  test_architecture_pressure.py  test_archive_sources.py  test_audit_correlation.py  test_batch_event_error_sanitization.py  test_cache_provider_product_shape.py  test_cache_registry.py  test_canonical_chunk.py  test_capability_aware_default_query_plan.py  test_chunk_context_cache.py  test_chunk_contextualizer.py  test_chunk_locators.py  test_chunking_env_contract.py  test_chunking_ownership.py  test_chunking_product_shape.py  test_chunking_registry.py  test_cli.py  test_cli_config_parser_security.py  test_cli_context_output.py  test_cli_doctor_human_output.py  test_cli_embedding_dimension_env_contract.py  test_cli_env_config_product_shape.py  test_cli_ingest_archive.py  test_cli_ingest_concurrency.py  test_cli_ingest_query.py  test_cli_ingest_url.py  test_cli_ingest_urls.py  test_cli_manifest_compact.py  test_cli_product_shape.py  test_cli_profile_help.py  test_cli_provider_errors.py  test_cli_query_plan.py  test_cli_remote_discovery.py  test_cli_trace_summary.py  test_cohere_provider_contract.py  test_context_pack.py  test_context_pack_product_shape.py  test_context_pack_public_exports.py  (+223 more)
tests/evals/: test_eval_reporting_contracts.py  test_retrieval_eval_pr.py  test_semantic_quality_local.py
tests/support/: __init__.py  cli_remote.py  fakes.py  log_sanitization.py  pgvector_fake.py  provider_fixtures.py  source_graph.py  turbopuffer_fake.py
(+386 files in other folders)
