[project]
name = 'rag-core'
version = '0.1.0'
description = 'An embeddable retrieval layer for AI apps and agents that need controllable RAG.'
readme = 'README.md'
license = 'MIT'
license-files = ['LICENSE']
requires-python = '>=3.11'
keywords = ['rag', 'retrieval', 'qdrant', 'search', 'ocr']
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
  'beautifulsoup4>=4.12.0',
  'defusedxml>=0.7.1',
  'fastembed>=0.4.0',
  'markdownify>=0.13.1',
  'openai>=1.0.0',
  'openpyxl>=3.1.0',
  'PyMuPDF>=1.24.0',
  'python-docx>=1.1.0',
  'python-pptx>=1.0.2',
  'qdrant-client>=1.12.0',
]

[project.scripts]
rag-core = 'rag_core.cli:main'

[project.optional-dependencies]
semantic = [
  'magika>=0.5.0',
  'sentence-transformers>=3.0.0',
  'tree-sitter-language-pack>=0.7.0',
]
html = [
  'html-to-markdown>=3.0.0',
]
rerank = [
  'cohere>=5.0.0',
]
voyage = [
  'voyageai>=0.3.0',
]
zeroentropy = [
  'zeroentropy>=0.1.0a11',
]
opentelemetry = [
  'opentelemetry-api>=1.24.0',
]
anthropic = [
  'anthropic>=0.40.0',
]
langchain = [
  'langchain-core>=0.2.17',
]
openai-agents = [
  'openai-agents>=0.15.1',
]
runtime = [
  'starlette>=0.37.0',
  'uvicorn>=0.30.0',
]
turbopuffer = [
  'turbopuffer>=2.0.0',
]

[dependency-groups]
dev = [
  'mypy>=1.11.0',
  'pre-commit>=3.8.0',
  'pytest>=8.3.0',
  'pytest-recording>=0.13.0',
  'ruff>=0.6.0',
  'starlette>=0.37.0',
  'uvicorn>=0.30.0',
  'vcrpy>=6.0.0',
]

[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.package-data]
rag_core = [
  'py.typed',
  '*.pyi',
  'events/*.pyi',
  'integrations/*.pyi',
  'search/*.pyi',
  'search/providers/*.pyi',
]

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
pythonpath = ['src']
markers = [
  "eval: PR retrieval regression on fixture embeddings (`tests/evals/test_retrieval_eval_pr.py`)",
  "eval_harness: metric/rerank plumbing tests that may use fake stores",
  "integration: local integration tests that exercise process, HTTP, or real in-memory adapters",
  "meta: docs, packaging, public-surface checks, or repository-shape tests; not runtime proof",
  "live: tests that require external provider credentials or services",
  "provider_contract: recorded provider SDK replay; no network in CI",
  "plumbing: demo/fake embedders or wiring-only checks",
]

[tool.ruff]
target-version = 'py311'
src = ['src', 'tests']
extend-exclude = ['build', 'dist', 'src/rag_core.egg-info', '__pycache__']

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F']

[tool.ruff.lint.per-file-ignores]
'src/rag_core/documents/converters/pdf_converter.py' = ['F401']
'src/rag_core/search/providers/sparse.py' = ['F401']

[tool.mypy]
python_version = '3.11'
files = ['src', 'tests', 'examples']
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
disable_error_code = ['import-untyped']

[[tool.mypy.overrides]]
module = [
  'fastembed',
  'magika',
  'openpyxl',
  'cohere',
  'qdrant_client',
  'qdrant_client.*',
  'sentence_transformers',
  'tree_sitter_language_pack',
  'turbopuffer',
]
ignore_missing_imports = true
