[project]
name = 'rag-core'
version = '0.1.0'
description = 'An embeddable retrieval layer for AI apps and agents that need controllable RAG.'
readme = 'README.md'
license = 'MIT'
license-files = ['LICENSE']
requires-python = '>=3.11'
keywords = ['rag', 'retrieval', 'qdrant', 'search', 'ocr']
classifiers = [
  'Development Status :: 4 - Beta',
  'Intended Audience :: Developers',
  'Programming Language :: Python :: 3',
  'Programming Language :: Python :: 3.11',
  'Programming Language :: Python :: 3.12',
  'Topic :: Scientific/Engineering :: Artificial Intelligence',
]
dependencies = [
  'defusedxml>=0.7.1,<0.8',
  'fastembed>=0.4.0,<0.9',
  'markdownify>=0.13.1,<2',
  'openai>=1.0.0,<3',
  'openpyxl>=3.1.0,<4',
  'PyMuPDF>=1.24.0,<2',
  'python-docx>=1.1.0,<2',
  'python-pptx>=1.0.2,<2',
  'qdrant-client>=1.17.0,<2',
]

[project.scripts]
rag-core = 'rag_core.cli:main'

[project.optional-dependencies]
semantic = [
  'magika>=0.5.0,<2',
  'sentence-transformers>=3.0.0,<6',
  'tree-sitter-language-pack>=0.7.0,<2',
]
html = [
  'html-to-markdown>=3.0.0,<4',
]
rerank = [
  'cohere>=5.0.0,<7',
]
voyage = [
  'voyageai>=0.3.0,<0.4',
]
zeroentropy = [
  'zeroentropy>=0.1.0a11,<0.2',
]
opentelemetry = [
  'opentelemetry-api>=1.24.0,<2',
]
anthropic = [
  'anthropic>=0.40.0,<0.98',
]
langchain = [
  'langchain-core>=0.2.35,<2',
]
openai-agents = [
  'openai-agents>=0.15.1,<0.16',
]
mcp = [
  'mcp>=1.2',
]
runtime = [
  'starlette>=0.37.0,<2',
  'uvicorn>=0.30.0,<0.47',
]
turbopuffer = [
  'turbopuffer>=2.0.0,<3',
]
pgvector = [
  'asyncpg>=0.29,<1',
  'pgvector>=0.2,<1',
]

[dependency-groups]
dev = [
  'mcp>=1.2',
  'mypy>=1.11.0',
  'pre-commit>=3.8.0',
  'pytest>=8.3.0',
  'pytest-recording>=0.13.0',
  'ruff>=0.6.0',
  'starlette>=0.37.0',
  'uvicorn>=0.30.0',
  'vcrpy>=6.0.0',
]

[build-system]
requires = ['setuptools>=68', 'wheel']
build-backend = 'setuptools.build_meta'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.package-data]
rag_core = [
  'py.typed',
  '*.pyi',
  'events/*.pyi',
  'integrations/*.pyi',
  'search/*.pyi',
  'search/providers/*.pyi',
]

[tool.setuptools.packages.find]
where = ['src']

[tool.pytest.ini_options]
pythonpath = ['src']
markers = [
  "eval: retrieval regression tests for fixture vectors and local semantic quality",
  "eval_harness: metric/rerank plumbing tests that may use fake stores",
  "integration: local integration tests that exercise process, HTTP, or real in-memory adapters",
  "meta: docs, packaging, public-surface checks, or repository-shape tests; not runtime proof",
  "live: tests that require external provider credentials or services",
  "provider_contract: recorded provider SDK replay; no network in CI",
  "plumbing: demo/fake embedders or wiring-only checks",
]

[tool.ruff]
target-version = 'py311'
src = ['src', 'tests']
extend-exclude = ['build', 'dist', 'src/rag_core.egg-info', '__pycache__', 'docs-site']

[tool.ruff.lint]
select = ['E4', 'E7', 'E9', 'F']

[tool.ruff.lint.per-file-ignores]
'src/rag_core/documents/converters/pdf_converter.py' = ['F401']
'src/rag_core/search/providers/sparse.py' = ['F401']

[tool.mypy]
python_version = '3.11'
files = ['src', 'tests', 'examples']
pretty = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
check_untyped_defs = true
no_implicit_optional = true
disable_error_code = ['import-untyped']

[[tool.mypy.overrides]]
module = [
  'fastembed',
  'magika',
  'openpyxl',
  'qdrant_client',
  'qdrant_client.*',
  'asyncpg',
  'pgvector.*',
  'sentence_transformers',
  'tree_sitter_language_pack',
  'turbopuffer',
]
ignore_missing_imports = true
